@@ -5,11 +5,12 @@ serd (0.30.7) unstable;
   * Fix potential memory error when serialising URIs
   * Move headers to an include directory
   * Refuse to write relative URI references to NTriples
+  * Remove the need for a generated configuration header
   * Remove use of C character class functions that may use locale
   * Split up and reorganize unit tests
   * Use aligned allocation via C11 or Windows API where possible
 
- -- David Robillard <d@drobilla.net>  Thu, 17 Dec 2020 09:09:31 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 01 Jan 2021 13:16:40 +0000
 
 serd (0.30.6) stable;
 
